// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator-jest #writing extensions = [".js", ".jsx"] 1`] = `
"const moduleFileExtensions = [\\"js\\",\\"jsx\\"]

module.exports = {
    collectCoverageFrom: [\`src/**/*.\${moduleFileExtensions}\`]
}
"
`;

exports[`generator-jest #writing extensions = [".js"] 1`] = `
"const moduleFileExtensions = [\\"js\\"]

module.exports = {
    collectCoverageFrom: [\`src/**/*.\${moduleFileExtensions}\`]
}
"
`;

exports[`generator-jest #writing extensions = [".ts", ".js", ".json"] 1`] = `
"const moduleFileExtensions = [\\"ts\\",\\"js\\",\\"json\\"]

module.exports = {
    collectCoverageFrom: [\`src/**/*.\${moduleFileExtensions}\`]
}
"
`;

exports[`generator-jest #writing extensions = [".ts", ".js"] 1`] = `
"const moduleFileExtensions = [\\"ts\\",\\"js\\"]

module.exports = {
    collectCoverageFrom: [\`src/**/*.\${moduleFileExtensions}\`]
}
"
`;

exports[`generator-jest #writing extensions = [".ts", ".tsx", ".js", ".jsx"] 1`] = `
"const moduleFileExtensions = [\\"ts\\",\\"tsx\\",\\"js\\",\\"jsx\\"]

module.exports = {
    collectCoverageFrom: [\`src/**/*.\${moduleFileExtensions}\`]
}
"
`;
